--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
   <title>WEB1 - Welcome</title>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MBLX3FXW69"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MBLX3FXW69');
+</script>
+
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
@@ -37,6 +47,7 @@
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
   </p>
+
   <p>
   <!--Start of Tawk.to Script-->
 <script type="text/javascript">
@@ -52,5 +63,6 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script-->
 </p>
+
 </body>
 </html>
