--- a/2.html
+++ b/2.html
@@ -3,18 +3,9 @@
 <head>
   <title>WEB1 - CSS</title>
   <meta charset="utf-8">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-MBLX3FXW69"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-MBLX3FXW69');
-</script>
- <style>
+  <style>
   a {
-    color:yellow;
+    color:black;
   }
   </style>
 </head>
