--- a/1.html
+++ b/1.html
@@ -1,8 +1,19 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - HTML</title>
+  <title>WEB - CSS</title>
   <meta charset="utf-8">
+  <style>
+    a {
+      color:black;
+      text-decoration: none;
+    }
+    h1 {
+      font-size:45px;
+      text-align: center;
+    }
+  </style>
+  
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MBLX3FXW69"></script>
 <script>
