--- a/1.html
+++ b/1.html
@@ -4,6 +4,15 @@
   <title>WEB - CSS</title>
   <meta charset="utf-8">
   <style>
+  body{
+       margin:0;
+     }
+     #active {
+      color:red;
+    }
+    .saw {
+      color:gray;
+    }
     a {
       color:black;
       text-decoration: none;
@@ -11,26 +20,24 @@
     h1 {
       font-size:45px;
       text-align: center;
+      border-bottom:1px solid gray;
+      margin:0;
+      padding:20px;
+    }
+    ol{
+      border-right:1px solid gray;
+      width:100px;
+      margin:0;
+      padding:20px;
     }
   </style>
-  
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-MBLX3FXW69"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-MBLX3FXW69');
-</script>
-
 </head>
 <body>
-  <h1><a href="index.html"><font color="red">WEB</font></a></h1>
+  <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li><a href="1.html"><font color="red">HTML</font></a></li>
-    <li><a href="2.html"><font color="red">CSS</font></a></li>
-    <li><a href="3.html"><font color="red">JavaScript</font></a></li>
+    <li><a href="1.html" class="saw">HTML</a></li>
+    <li><a href="2.html" class="saw active">CSS</a></li>
+    <li><a href="3.html">JavaScript</a></li>
   </ol>
   <h2>HTML</h2>
   <p>
